Fix setting dark mode for echarts (#90)

--- a/src/fava_portfolio_returns/templates/style.css
+++ b/src/fava_portfolio_returns/templates/style.css
@@ -1,13 +1,7 @@
 .headerline .active {
-  color: #333;
+  color: light-dark(#333, var(--mui-palette-text-primary));
 }
 
-@media (prefers-color-scheme: dark) {
-  .headerline .active {
-    color: var(--mui-palette-text-primary);
-  }
-
-  .investment-selection input {
-    background: none;
-  }
+.investment-selection input {
+  background: none;
 }
